// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-ai - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Use for Azure AI: Search, Speech, OpenAI, Document Intelligence. Helps with search, vector/hybrid search, speech-to-text, text-to-speech, transcription, OCR. USE FOR: AI Search, query search, vector search, hybrid search, semantic search, speech-to-text, text-to-speech, transcribe, OCR, convert text to speech. DO NOT USE FOR: Function apps/Functions (use azure-functions), databases (azure-kusto), general Azure resources.",
  "extractedKeywords": [
    "apps",
    "azure",
    "azure-functions",
    "azure-kusto",
    "cli",
    "convert",
    "databases",
    "document",
    "function",
    "functions",
    "general",
    "helps",
    "hybrid",
    "intelligence",
    "mcp",
    "openai",
    "query",
    "resources",
    "search",
    "semantic",
    "speech",
    "speech-to-text",
    "text",
    "text-to-speech",
    "transcribe",
    "transcription",
    "vector",
    "with",
  ],
  "name": "azure-ai",
}
`;

exports[`azure-ai - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "apps",
  "azure",
  "azure-functions",
  "azure-kusto",
  "cli",
  "convert",
  "databases",
  "document",
  "function",
  "functions",
  "general",
  "helps",
  "hybrid",
  "intelligence",
  "mcp",
  "openai",
  "query",
  "resources",
  "search",
  "semantic",
  "speech",
  "speech-to-text",
  "text",
  "text-to-speech",
  "transcribe",
  "transcription",
  "vector",
  "with",
]
`;
